# emergency-backup-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: MyIcon.icns
src/: main.rs  utils.rs
src/config/: config.rs
src/cpu_tracker/: cpu_tracker.rs  mod.rs
src/devices/: devices.rs
src/gui/: config_gui.rs  config_window.rs  gui.rs  mod.rs  utils_gui.rs  warning_window.rs
src/io/: io.rs
src/job/: job.rs
src/pattern_recognition/: mod.rs  pattern_recognition.rs
