[package]
name = "eb-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.bundle]
name = "eb-rs"
identifier = "com.LcPes.eb-rs"
icon = ["assets/MyIcon.icns"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display-info = "0.5.2"
mouse-rs = "0.4.2"
rfd = "0.15.1"
fs_extra = "1.3.0"
sysinfo = "0.32.0"
eframe = "0.29.1"
auto-launch = "0.5.0"
rodio = "0.20.1"
chrono = "0.4.38"
byte-unit = "5.1.6"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
